1.1.16/1.0.17 - xxxxxxxxxxxxx
=============================
* Merge 114 from amuraru: Make sure internal executor services are not started until startup.

* Merge 116 from samuelgmartinez: Fix for Issue 115: Wrong behaviour in LeaderLatch when a candidate
loses connection

* Issue 118: Ignore nonode exceptions when deleting lock path

1.1.15/1.0.16 - July 14, 2012
=============================
* Added ChildReaper. This builds on the newly added Reaper. This utility monitors a single node
and reaps empty children of that node.

* Issue 107: The namespace wrapper was corrupting the path if the EnsurePath handler had an error.
The best thing to do is let the code continue.

* Issue 109: Make duplicate close() calls in CuratorFrameworkImpl a NOP instead of an error.

* A more complete solution for background build-ups. The previous implementation did the retry sleep
in the background process which ends up blocking ZooKeeper. During connection problems, this would
cause ZooKeeper packets/watchers to back up. The new implementation uses a DelayQueue to simulate a
sleep in the background. NOTE: this caused a change to the RetryPolicy APIs.

1.1.14/1.0.15 - July 6, 2012
============================
* Merge #100 from bbeck: Added BoundedExponentialBackoffRetry.

* Merge #102 from artemip: Added REAP_UNTIL_GONE mode to Reaper; Remove items from activePaths once
they are deletes; Tests

* Issue 99: The Double Barrier should allow more than the max to enter the barrier. I don't see any
harm in this.

* Issue 103: Important change/fix for ExhibitorEnsembleProvider: the previous implementation wasn't
handling outages very well. The connectionString could get stuck to an old value if the list of
Exhibitors all went down and couldn't be contacted. Now, a backup provider is required and the backup
is used to update the list of Exhibitors should there be connection problems.

* IMPORTANT NOTE: The 1.0.x branch of Curator is now end of life. There will be a few more releases